--- a/style.css
+++ b/style.css
@@ -11,11 +11,12 @@ body {
     background: #56baed;
 }
 
-.select-box, .play-board {
+.select-box, .play-board .result-box {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50% -50%);
+    transition:all 0.3s ease;
 }
 
 .select-box {
@@ -29,8 +30,13 @@ body {
     max-width: 330px;
     width: 100%;
     display: none;
+   
 }
-
+.select-box.hidden{
+    opacity:0;
+    pointer-events:none;
+    transform:translate(-50%, -50%)scale(0.9);
+}
 .select-box header {
     font-size: 23px;
     font-weight: 600;
@@ -70,8 +76,15 @@ body {
     margin-left: 5px;
 }
 
-.play-board {
-    display: none;
+.play-board{
+    opacity:0;
+    pointer-events:none;
+    transform:translate(-50%,-50%)scale(0.9);
+}
+.play-board.show{
+    opacity:1;
+    pointer-events:auto;
+    transform:translate(-50%,-50%)scale(1);
 }
 
 .play-board .details {
@@ -99,6 +112,7 @@ body {
     text-align: center; 
     position: relative;
     z-index: 5;
+    transition:all 0.3s ease;
 }
 
 .details span:first-child {
@@ -115,6 +129,19 @@ body {
     width: 50%;
     border-radius: 5px;
     z-index: 2;
+    transition:all 0.3s ease;
+}
+
+.players.active span:first-child{
+    color:#56baed;
+}
+.players.active span:nth-child(2){
+    color:#fff;
+
+}
+.players.active .slider{
+    left:50%;
+
 }
 
 .play-board .play-area {
