--- a/style.css
+++ b/style.css
@@ -8,7 +8,8 @@
 }
 
 body {
-    background: #56baed;
+    background-image:url(/img/vertical-aesthetic-background-with-3d-effect.jpg);
+    background-size:inherit
 }
 
 .select-box, .play-board, .result-box {
@@ -61,7 +62,7 @@ body {
     padding: 8px 0;
     border: none;
     outline: none;
-    background: #56baed;
+    background: #152025;
     border-radius: 5px;
     color: #fff;
     cursor: pointer;
@@ -83,6 +84,8 @@ body {
 }
 
 .play-board{
+    top: 50%;
+    left: 50%;
     opacity:0;
     pointer-events:none;
     transform:translate(-50%,-50%)scale(0.9);
@@ -123,7 +126,7 @@ body {
 }
 
 .players.active span:first-child{
-    color:#56baed;
+    color:#152025;
 }
 .players.active span:nth-child(2){
     color:#fff;
@@ -153,7 +156,7 @@ body {
     font-size: 40px;
     text-align: center;
     line-height: 80px;
-    color: #56baed;
+    color:  #152025;
 }
 
 
@@ -166,7 +169,7 @@ body {
     position: absolute;
     top: 0;
     left: 0;
-    background: #346882;
+    background: #152025;
     height: 100%;
     width: 50%;
     border-radius: 5px;
@@ -208,7 +211,7 @@ body {
     padding: 8px 20px;
     border: none;
     outline:none;
-    background:#56baed;
+    background:#152025;
     border-radius:5px;
     color:#fff;
     cursor:pointer;
