Navigated to the img folder

--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 }
 
 body {
-    background-image:url(/img/vertical-aesthetic-background-with-3d-effect.jpg);
+    background-image:url(./img/vertical-aesthetic-background-with-3d-effect.jpg);
     background-size:cover;
 }
 
