--- a/style.css
+++ b/style.css
@@ -205,9 +205,10 @@ body {
     font-size: 25px;
     display:flex;
     justify-content: center;
+    color: rgb(255, 254, 252);
 }
 .result-box .won-text p{
-    font-weight:600;
+    font-weight:800;
     margin: 0 5px;
 
 }
@@ -229,3 +230,15 @@ body {
     transition: all 0.3s ease;
 }
 
+.overlay{
+    position: fixed;
+    top:50%;
+    left:50%;
+    width:100%;
+    height:80%;
+    background:rgba(0,0,0,0.5);
+    display: none;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
